--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.massisframework/j-text-utils -->
+        <dependency>
+            <groupId>com.massisframework</groupId>
+            <artifactId>j-text-utils</artifactId>
+            <version>0.3.4</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>maven-unit-test</finalName>
@@ -32,5 +38,4 @@
 
         </plugins>
     </build>
-
 </project>
